[gd_scene load_steps=16 format=3 uid="uid://bhnoncv4d06wc"]

[ext_resource type="Script" uid="uid://du2lihqnmyqm8" path="res://player/player_controller.gd" id="1_rkbax"]
[ext_resource type="PackedScene" uid="uid://dwdqdl3jwb226" path="res://player/mannequin.tscn" id="2_rkbax"]
[ext_resource type="Script" uid="uid://vkeo4pwdf5q3" path="res://player/player_interaction_handler.gd" id="3_g1dw6"]
[ext_resource type="Script" uid="uid://dyijtcfotuln4" path="res://inventory/item_data.gd" id="4_g6k8r"]
[ext_resource type="PackedScene" uid="uid://c27u3cugm2ou4" path="res://inventory/inventory_ui.tscn" id="4_yw30f"]
[ext_resource type="PackedScene" uid="uid://c4hop2yk5wlwd" path="res://inventory/hotbar_ui.tscn" id="5_qjkh3"]
[ext_resource type="Texture2D" uid="uid://m7kxh50fcfs2" path="res://items/icons/test_sword.png" id="5_rgyib"]
[ext_resource type="PackedScene" uid="uid://lkwdp2272vwf" path="res://items/prefabs/test_sword.tscn" id="6_hg6s5"]
[ext_resource type="Texture2D" uid="uid://ba4ndqwlh3raq" path="res://items/icons/test_cube.png" id="7_8t03j"]
[ext_resource type="PackedScene" uid="uid://fieh0kksmv6" path="res://items/prefabs/test_cube.tscn" id="8_2ieo8"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rkbax"]
radius = 0.19824219
height = 1.8349609

[sub_resource type="SphereShape3D" id="SphereShape3D_onrkg"]

[sub_resource type="Resource" id="Resource_boad6"]
script = ExtResource("4_g6k8r")
item_name = "Test Sword"
item_description = "Just a testing sword."
item_model_prefab = ExtResource("6_hg6s5")
icon = ExtResource("5_rgyib")
equip_type = 6
weapon_type = 1
damage_type = 2
metadata/_custom_type_script = "uid://dyijtcfotuln4"

[sub_resource type="Resource" id="Resource_rgyib"]
script = ExtResource("4_g6k8r")
item_name = "Test Cube"
item_description = "Just a testing cube."
item_model_prefab = ExtResource("8_2ieo8")
icon = ExtResource("7_8t03j")
equip_type = 2
weapon_type = 4
damage_type = 2
is_two_handed = true
max_stack_size = 30
metadata/_custom_type_script = "uid://dyijtcfotuln4"

[sub_resource type="SphereShape3D" id="SphereShape3D_rkbax"]
radius = 1.7178681

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("inventory_ui", "hotbar_ui")]
script = ExtResource("1_rkbax")
tilt_upper_limit = 1.0
tilt_lower_limit = -0.45
inventory_ui = NodePath("InventoryUI")
hotbar_ui = NodePath("HotbarUI")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.925, 0)
shape = SubResource("CapsuleShape3D_rkbax")

[node name="Mannequin" parent="." instance=ExtResource("2_rkbax")]

[node name="Pivot" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.8660253, -0.49999997, 0, 0.49999997, 0.8660253, 0, 1.7250572, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="Pivot"]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, 0)
shape = SubResource("SphereShape3D_onrkg")
spring_length = 5.0

[node name="Camera3D" type="Camera3D" parent="Pivot/SpringArm3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1.0000002, 0, 0, 0, 1.0000002, 0, 0, 0)

[node name="InteractionArea" type="Area3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 1, 0)
collision_layer = 0
collision_mask = 2
script = ExtResource("3_g1dw6")
item_types = Array[ExtResource("4_g6k8r")]([SubResource("Resource_boad6"), SubResource("Resource_rgyib")])

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
shape = SubResource("SphereShape3D_rkbax")

[node name="InventoryUI" parent="." node_paths=PackedStringArray("player_body", "hotbar_ui") instance=ExtResource("4_yw30f")]
player_body = NodePath("..")
hotbar_ui = NodePath("../HotbarUI")

[node name="HotbarUI" parent="." instance=ExtResource("5_qjkh3")]

[connection signal="body_entered" from="InteractionArea" to="InteractionArea" method="on_object_entered_area"]
[connection signal="body_exited" from="InteractionArea" to="InteractionArea" method="on_object_exited_area"]
[connection signal="on_item_picked_up" from="InteractionArea" to="InventoryUI" method="_pickup_item"]
